# Rust-MCP

./: Cargo.toml  README.md
examples/: http_all_test_load_simulation.rs  http_client_session_management.rs  http_macro_tool_server.rs  http_prompt_server.rs  http_server_session_management.rs  http_sse.rs  http_subscribe_server.rs  http_subscribe_server_load_simulation.rs  initialization_server.rs  simple_client.rs  simple_http_client.rs  simple_http_server.rs  single_client_load_test.rs  tcp_client.rs  tcp_server.rs  tools_server.rs
mcp_macros/: Cargo.toml
mcp_macros/src/: lib.rs
mcp_sdk_types/: Cargo.toml
mcp_sdk_types/src/: lib.rs
src/: client.rs  lib.rs  main.rs  pagination.rs  prompts.rs  resources.rs  server.rs  tcp_transport.rs  transport.rs
tests/: client.rs  http_test_session_management.rs  initialization_test.rs  initialize.rs  integration_test.rs  server.rs  simple_http_test.rs  sse.rs  tcp_server_test.rs  tools_test.rs
