[package]
name = "rust_mcp_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version="1.46.0",features = ["full"]}
thiserror = "2.0.12"
anyhow = "1.0"
futures = "0.3.31"
bytes = "1.10.1"
uuid = { version = "1", features = ["v4","fast-rng"] }
axum = "0.8.4"
reqwest = { version = "0.12.22", features = ["json"] }
axum-macros = "0.5.0"


[[bin]]
name = "simple_http_server" 
path = "examples/simple_http_server.rs"

[[bin]]
name = "simple_http_client"
path = "examples/simple_http_client.rs"


[[bin]]
name = "http_client_session_management" 
path = "examples/http_client_session_management.rs"

[[bin]]
name = "http_server_session_management"
path = "examples/http_server_session_management.rs"

[[test]]
name = "simple_http_test"
path = "tests/simple_http_test.rs"


[[test]]
name = "http_test_session_management"
path = "tests/http_test_session_management.rs"
